# reminder

backend/: .env.example  pyproject.toml
backend/conf/: settings.py  urls.py
backend/donations/: models.py
backend/reminders/: models.py  serializers.py  views.py
backend/user_manage/: models.py  serializers.py  urls.py  views.py
backend/user_manage/migrations/: 0001_initial.py
backend/user_manage/services/: data_validation.py
frontend/: .prettierrc  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js
frontend/src/: App.tsx  PublicRouter.tsx  Router.tsx  main.tsx
frontend/src/components/: DeleteReminderCard.tsx  Header.tsx  LoggoutCard.tsx  RemindersSideBar.tsx
frontend/src/error/: DontHavePermission.tsx
frontend/src/pages/: About.tsx  Contact.tsx  Home.tsx  NotFound.tsx  Services.tsx  SignIn.tsx  SignUp.tsx
